@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v1.9.10.8
 * Add a Volatile account to the Test Bank that always changes its balance.
+* Fix widget not updating when the balance change was lower than the notification threshold.
 
 v1.9.10.7 (2016-08-18)
 * Update certificates for AmericanExpress and Coop
